[tool.poetry]
name = "test-harness"
version = "0.1.0"
description = ""
authors = ["rhys <rhyswhi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.pytest.ini_options]
markers = [
    "port",
    "harbour",
    "shipping",
    "stevedore"
]


